2001-06-15  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixed problems for "using-declaration" in ScriptObject.cpp.

2001-06-14  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixes for object construction in several places in 
          vrml97node.cpp, VrmlScene.cpp, VrmlNodeType.cpp and
          VrmlNodeScript.cpp. MSVC++6.0 does not like the way it was.

        * Fixed type mismatch in VrmlNodeProto.cpp and VrmlNodeProto.h

2001-06-13  S. K. Bose  <bose@pavan.barc.ernet.in>

        * In "VrmlNodePtr.h" as "pointer" is not a member of std::map 
          (though it is in standard) in containers library of MSVC++6.0,
          "value_type" can be used (it is also in standard). Though 
          I have used "WIN32" preprocessing directive for making 
          equivalent of "countPtr", but I hope this will work for other 
          compiler as well.
 
2001-06-12  Braden McDaniel <braden@endoframe.com>

        * Used classes and namespaces to organize functions in the
          JavaScript binding.

        * Changed implementation of JavaScript MF* types so that they
          nolonger depend on the JavaScript Array class. (This
          eliminates our dependency on the private JS header.)

        * Moved JavaScript binding implementation to ScriptObject.cpp.
          (None of the JavaScript binding needs to be part of the public
          API.)

2001-06-10  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixed macros in *.h to support WIN32 DLLs

2001-06-08  Braden McDaniel <braden@endoframe.com>

        * If it's available, use the STL hash_map rather than std::map
          in VrmlNodePtr.

2001-06-07  Braden McDaniel <braden@endoframe.com>

        * Replaced SimpleVector in the parser with std::vector.

        * Moved Vrml97Scanner implementation to Vrml97Parser.g.

2001-06-06  Braden McDaniel <braden@endoframe.com>

        * Made PNG support (libpng) optional.

        * Made JPEG support (libjpeg) optional.
